# ChemEquivMapper

./: LICENSE  README.md  pyproject.toml
exp_data_preprocessing/: README.md  __init__.py  exp_preprocessing.py
experimental_data/: Covid-19_Su et al..txt  MSdata_ST001412_1.txt  ST000923_RP_negative.txt  ST000923_RP_positive.txt  ST000923_hilic_negative.txt  ST000923_hilic_positive.txt  m_MTBLS1866_GCxGC-MS_positive__metabolite_profiling_v2_maf.txt  m_MTBLS1866_LC-MS_negative_reverse-phase_metabolite_profiling_v2_maf.txt  m_MTBLS1866_LC-MS_positive_reverse-phase_metabolite_profiling_v2_maf.txt  m_MTBLS2224_GC-MS_positive__metabolite_profiling_v2_maf.txt  m_MTBLS2224_LC-MS_negative_reverse-phase_metabolite_profiling_v2_maf.txt  m_MTBLS2224_LC-MS_positive_reverse-phase_metabolite_profiling_v2_maf.txt  m_MTBLS2291_LC-MS_positive_reverse-phase_metabolite_profiling_v2_maf.txt  metadata_ST000923.txt  metadata_group_Covid-19_Su et al..txt  metadata_group_MTBLS136.txt  metadata_group_MTBLS1866.txt  metadata_group_MTBLS2224.txt  metadata_group_MTBLS2291.txt  metadata_group_ST001412.txt
src/ChemEquiv/: __init__.py  context.py
src/ChemEquiv/analysis/: README.md  __init__.py  ora.py  stats.py
src/ChemEquiv/mapping/: README.md  __init__.py  kegg_index.py  mapper.py  reactome_index.py
src/ChemEquiv/preprocess/: README.md  __init__.py  input_table.py  preprocessor.py
src/ChemEquiv/resources/: README.md  __init__.py  chebi_resource_manager.py  kegg_resource_manager.py  reactome_resource_manager.py
src/ChemEquiv/steps/: __init__.py
src/ChemEquiv/steps/step1_refmet/: cache.py  (+6 more)
(+22 files in other folders)
