[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ChemEquiv"
version = "0.1.0"
description = "Tools to handle feature tables and map to ChEBI/KEGG/Reactome."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Alexandra Tiganouria" }]

dependencies = [
  "pandas>=2.0",
  "numpy>=1.23",
  "scipy>=1.10",
  "statsmodels>=0.14",
  "requests>=2.31",
  "tqdm>=4.66",
  "pronto>=2.5.8",
  "openpyxl>=3.1.2",
  "reportlab>=4.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
